Padding to form fixed on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,8 @@ footer p {
     h1 {
         font-size: 300%;
     }
-    
+
+    form,
     h1,
     .lead {
         padding: 0 15px 0 15px;
